# moosic

./: .gitignore  .gitmodules  README.md  meson.build
src/: main.cpp  meson.build
src/backends/: backend.hpp  meson.build  youtube.cpp  youtube.hpp
src/engines/: MusicEngine.cpp  MusicEngine.hpp  MusicQueue.cpp  MusicQueue.hpp  meson.build
